@@ -32,6 +32,7 @@
             --add-opens org.financer.shared/org.financer.shared.domain.model.api.transaction.fixed=ALL-UNNAMED
             --add-opens org.financer.shared/org.financer.shared.domain.model.api.transaction.variable=ALL-UNNAMED
             --add-opens org.financer.shared/org.financer.shared.domain.model.api.user=ALL-UNNAMED
+            --add-opens org.financer.shared/org.financer.shared.domain.model.value.objects=ALL-UNNAMED
             --add-opens org.financer.server/org.financer.server=ALL-UNNAMED
             --add-opens org.financer.server/org.financer.server.application=ALL-UNNAMED
             --add-opens org.financer.server/org.financer.server.application.api=ALL-UNNAMED
@@ -42,6 +43,7 @@
             --add-opens org.financer.server/org.financer.server.domain.model.user=ALL-UNNAMED
             --add-opens org.financer.server/org.financer.server.domain.model.transaction=ALL-UNNAMED
             --add-opens org.financer.server/org.financer.server.domain.model.category=ALL-UNNAMED
+            --add-opens org.financer.server/org.financer.server.utils=ALL-UNNAMED
         </project.testing.arguments>
         <project.testing.headless/>
     </properties>
@@ -163,6 +165,11 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.16</version>
+        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
